<resources>
    <string name="app_name">Weather App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="searchCity">Search City</string>

    <string name="feelsLike">Feels like:</string>
    <string name="minTemp">Min temp:</string>
    <string name="maxTemp">Max temp:</string>
    <string name="pressure">Pressure:</string>
    <string name="humidity">Humidity:</string>
    <string name="sealevel">Sea level:</string>
    <string name="wind">Wind</string>
    <string name="speed">Speed</string>
    <string name="gust">Gust</string>
    <string name="degrees">Degrees</string>

    <string name="errorMessage">An error has occurred</string>

    <string name="cityNotFound">City was not found</string>
    <string name="search_icon">Search Icon</string>
    <string name="clear_icon">Clear Icon</string>
    <string name="wind_icon">Wind Icon</string>
    <string name="search_for_a_city_to_see_its_weather_details">Search for a city to see its weather details</string>


</resources>